Changed List.of to Arrays.asList to avoid NullPointerException